syntax = "proto3";

package stats.service.dashboard;

option java_package = "ru.practicum.ewm.grpc.stats.controller";

import "messages/event_similar.proto";

service RecommendationsController {
    rpc GetRecommendationsForUser(stats.message.request.UserPredictionsRequestProto)
            returns (stream stats.message.request.RecommendedEventProto);

    rpc GetSimilarEvents(stats.message.request.SimilarEventsRequestProto)
            returns (stream stats.message.request.RecommendedEventProto);

    rpc GetInteractionsCount(stats.message.request.InteractionsCountRequestProto)
            returns (stream stats.message.request.RecommendedEventProto);
}